--- a/service-catalog.html
+++ b/service-catalog.html
@@ -979,20 +979,18 @@
         </a>
         <a href="tel:+380668375666" class="social-btn phone"
           ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="100"
-            height="100"
+            width="40"
+            height="40"
             viewBox="0 0 24 24"
-            fill="white"
-            stroke="black"
-            stroke-width="1"
-            stroke-linecap="round"
-            stroke-linejoin="round"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
           >
             <path
-              d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
+              d="M6.62 10.79a15.091 15.091 0 006.59 6.59l2.2-2.2a1 1 0 011.11-.21c1.21.48 2.53.74 3.88.74a1 1 0 011 1v3.5a1 1 0 01-1 1C10.07 21 3 13.93 3 5a1 1 0 011-1h3.5a1 1 0 011 1c0 1.35.26 2.67.74 3.88a1 1 0 01-.21 1.11l-2.2 2.2z"
+              fill="white"
             />
           </svg>
+
           <i class="fas fa-phone social-icon"></i>
         </a>
         <a href="#header" class="to-home" id="back-to-top">
