--- a/service-catalog.html
+++ b/service-catalog.html
@@ -271,7 +271,7 @@
                 >
               </li>
               <li class="item-service-catalog">
-                <a href="#kondik" data-translate="item-service-catalog-kondi"
+                <a href="#kondi" data-translate="item-service-catalog-kondi"
                   >Обслуговування кондиціонерів</a
                 >
               </li>
