--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 </p>
                 <div class="btn-container">
                   <a
-                    href="./GBO.html"
+                    href="./ustanovka-gbo.html"
                     class="details-btn"
                     data-translate="details-btn"
                     >ПОДРОБНЕЕ</a
