--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                   type="tel"
                   id="phoneInput"
                   name="phone"
-                  placeholder="+380 50 025 25 25*"
+                  placeholder="+38 (___) ___ ____"
                   required
                 />
                 <input
@@ -941,7 +941,13 @@
             </div>
             <div class="form-group">
               <label for="phone" data-translate="phone">Телефон*</label>
-              <input type="tel" id="modalPhone" name="phone" required />
+              <input
+                type="tel"
+                id="modalPhone"
+                name="phone"
+                placeholder="+38 (___) ___ ____"
+                required
+              />
             </div>
             <div class="form-group">
               <label for="vin" data-translate="vin">VIN код автомобиля</label>
