--- a/index.html
+++ b/index.html
@@ -471,8 +471,7 @@
                 <p data-translate="services-p-8">
                   Заміна гальмівної рідини, прокачування гальмівної системи,
                   діагностика гальмівних колодок і дисків, перевірка роботи ABS,
-                  заміна гальмівних супортів та ремонт гідравлічної частини
-                  гальмівної системи.
+                  заміна гальмівних супортів.
                 </p>
                 <div class="btn-container">
                   <a
