--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
               </li>
             </ul>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a href="./contacts.html" data-translate="nav-item-contacts"
               >Контакты</a
             >
-          </li>
+          </li> -->
           <li class="nav-item">
             <a href="./price.html" data-translate="nav-item-price">Цены</a>
           </li>
