--- a/service-catalog.html
+++ b/service-catalog.html
@@ -29,11 +29,11 @@
           <li class="nav-item">
             <a href="./index.html" data-translate="nav-item-main">Главная</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a href="./foto-gallery.html" data-translate="nav-item-foto"
               >Фотогаллерея</a
             >
-          </li>
+          </li> -->
           <li class="nav-item">
             <a href="./parts.html" data-translate="nav-item-zapch"
               >Подбор запчастей</a
@@ -104,7 +104,9 @@
             </ul>
           </li>
           <!-- <li class="nav-item">
-            <a href="./contacts.html">Контакты</a>
+            <a href="./contacts.html" data-translate="nav-item-contacts"
+              >Контакты</a
+            >
           </li> -->
           <li class="nav-item">
             <a href="./price.html" data-translate="nav-item-price">Цены</a>
