--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
       </div>
       <div class="social-fixed">
         <a
-          href="https://t.me/RofLJeKee"
+          href="https://t.me/kkua1210"
           target="_blank"
           class="social-btn telegram"
           ><svg
