--- a/index.html
+++ b/index.html
@@ -1182,6 +1182,11 @@
                 <span data-translate="number-footer-dir-name">Павел</span>
               </div>
             </div>
+            <div class="develop">
+              <a href="https://t.me/RofLJeKee" class="number-link"
+                >Developer NahorniyV</a
+              >
+            </div>
           </div>
         </div>
       </div>
