--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/img/kaskad/hero3.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/img/hero3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,7 +12,18 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>АС КАСКАД</title>
+    <title>Автосервис Каскад в Павлограде | Ремонт авто, диагностика, ТО</title>
+    <meta
+      name="description"
+      content="🔧 Автосервис «Каскад» в Павлограде: профессиональный ремонт и обслуживание автомобилей.  
+✔ Ремонт и заправка ГБО  
+✔ Обслуживание кондиционеров (диагностика, заправка фреоном)  
+✔ Ремонт двигателей, ходовой части, трансмиссии  
+✔ Кузовные работы (покраска, рихтовка, удаление вмятин)  
+✔ Развал-схождение, замена шин и балансировка  
+✔ Полная диагностика, ТО, замена масла и фильтров  
+🚗 Гарантия качества, доступные цены, современное оборудование. Звоните!"
+    />
     <link rel="stylesheet" href="./src/style.css" />
     <link rel="stylesheet" href="./src/js/main.js" />
     <link rel="stylesheet" href="./src/js/1-gallery.js" />
