--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <meta
       name="description"
       content="🔧 Автосервис «Каскад» в Павлограде: профессиональный ремонт и обслуживание автомобилей.  
-✔ Ремонт и заправка ГБО  
-✔ Обслуживание кондиционеров (диагностика, заправка фреоном)  
+✔ Установка и ремонт ГБО  
+✔ Обслуживание кондиционеров 
 ✔ Ремонт двигателей, ходовой части, трансмиссии  
 ✔ Кузовные работы (покраска, рихтовка, удаление вмятин)  
 ✔ Развал-схождение, замена шин и балансировка  
 ✔ Полная диагностика, ТО, замена масла и фильтров  
-🚗 Гарантия качества, доступные цены, современное оборудование. Звоните!"
+🚗 Звоните!"
     />
     <link rel="stylesheet" href="./src/style.css" />
     <link rel="stylesheet" href="./src/js/main.js" />
